[package]
name = "wgpu-native"
version = "0.2.6"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "WebGPU native implementation on gfx-hal"
homepage = "https://github.com/gfx-rs/wgpu"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
local = []
remote = ["serde"]
metal-auto-capture = ["gfx-backend-metal/auto-capture"]
window-winit = ["winit", "gfx-backend-empty/winit"]

[dependencies]
arrayvec = "0.4"
bitflags = "1.0"
copyless = "0.1"
lazy_static = "1.1.0"
log = "0.4"
parking_lot = { version = "0.8" }
hal = { package = "gfx-hal", git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-empty = { default-features = false, git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-vulkan = { optional = true, git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-dx11 = { optional = true, git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-dx12 = { optional = true, git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-metal = { optional = true, git = "https://github.com/kyren/gfx", branch = "godzilla" }
gfx-backend-gl = { optional = true, git = "https://github.com/kyren/gfx", branch = "godzilla" }
#rendy-memory = { git = "https://github.com/rustgd/rendy", rev = "ce7dd7f", features = ["gfx-hal"] }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
vec_map = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.19", optional = true }
