[package]
name = "wgpu-native"
version = "0.3.3"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "WebGPU native implementation on gfx-hal"
homepage = "https://github.com/gfx-rs/wgpu"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
remote = ["serde"]
metal-auto-capture = ["gfx-backend-metal/auto-capture"]
#NOTE: glutin feature is not stable, use at your own risk
#glutin = ["gfx-backend-gl/glutin"]

[dependencies]
arrayvec = "0.4"
bitflags = "1.0"
copyless = "0.1"
lazy_static = "1.1.0"
log = "0.4"
hal = { package = "gfx-hal", git = "https://github.com/kyren/gfx", branch = "rodan" }
gfx-backend-empty = { git = "https://github.com/kyren/gfx", branch = "rodan" }
parking_lot = "0.9"
raw-window-handle = "0.1"
rendy-memory = { git = "https://github.com/kyren/rendy", branch = "rodan" }
rendy-descriptor = { git = "https://github.com/kyren/rendy", branch = "rodan" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
vec_map = "0.8"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
gfx-backend-metal = { git = "https://github.com/kyren/gfx", branch = "rodan" }
gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan", optional = true }

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan", features = ["x11"] }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { git = "https://github.com/kyren/gfx", branch = "rodan" }
gfx-backend-dx11 = { git = "https://github.com/kyren/gfx", branch = "rodan" }
gfx-backend-vulkan = { git = "https://github.com/kyren/gfx", branch = "rodan" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gfx-backend-gl = { git = "https://github.com/kyren/gfx", branch = "rodan" }
